compiler/testData/diagnostics/tests/SyntaxErrorInTestHighlightingEof.kt
// FIR_IDENTICAL
fun f() {<!SYNTAX!><!>
